dist/tests/utils/errors/errorNumberToHexString.js
"use strict";
Object.defineProperty(exports, "__esModule", { value: true });
function errorNumberToHexString(errorCode) {
    return errorCode.toString(16);
}
exports.default = errorNumberToHexString;
//# sourceMappingURL=errorNumberToHexString.js.map